--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -56,27 +56,25 @@
  - 도메인 관리자의 첫일은 존재하는 액티브 디렉터리의 사용자들을 찾는 일이다.
  - Deleting extra OUs and users : 일단 AD에 없는 다른 OU(Organizational Unit)이 있는지 확인해봐야 한다. 있고 사용을 하지 않는다면 예산 상의 이유로라도 삭제해야 한다. 만약 사용하는 것을 의도치 않게 삭제한다면 다시 만들어야 한다.
  - Delegation : 액티브 디렉터리에서 할 수 있는 일 중 하나는 특정 사용자에게 제어권을 줄 수 있다는 점이다. 도메인 관리자의 도움 없이 사용자에게 권한을 부여할 수 있다.
-(5) Group Policies
- - CVE(Common Vulenabilities and Exposures) : 간단하게 말하자면 취약점들의 사전이다. 하드웨어나 소프트웨어에서 발생하는 다양한 취약점과 보안 이슈들의 표준화된 식별자를 제공한다.
- - 각 취약점들은 CVE ID라는 식별자를 가지는데 이 식별자는 사용자들이 해당 취약점을 겪었던 사례들을 들여다볼 수 있게 한다.
- - MITRE Corporation이 해당 시스템을 유지하고 있다.
- - Exploit Database : 앱의 취약점을 악용하는 데는 많은 이유가 있다. 당연한 말이지만 우리는 허가 없이 취약점을 악용하지 말아야 한다.
- - 만약 우리한테 그러한 허가가 떨어진다면 우리는 악용될 수 있는 코드를 찾아야한다. 그 방법 중 하나가 Exploit Database이다.
- - 이 사이트에서 사용자는 검증된 악용할 수 있는 코드들의 목록을 볼 수 있다.
+
+(5) Managing Computers in AD
+ -  기기들을 관리하는데 중요한 것은 그들을 분리하고 조직화하는 것이다. 적어도 3가지로 분류하는데 다음과 같다.
+    1) Workstations : 액티브 디렉터리 도메인에서 가장 흔한 기기 중 하나이다. 도메인에 있는 각각의 사용자들은 워크스테이션에 로그인되어 있다. 워크스테이션은 사용자들의 작업이나 평소의 웹브라우징을 수행하는 기기이다.
+    2) Servers : 서버는 액티브 디렉터리 영역에서 두번째로 흔한 기기이다. 서버는 주로 사용자나 다른 서버에 서비스를 공급하는 역할을 한다.
+    3) Domain Controllers : 도메인 컨트롤러는 액티브 디렉터리 영역에서 세번째로 흔한 기기이다. 도메인 컨트롤러는 액티브 디렉터리 영역을 관리할 수 있게 해준다. 사용자 계정 보안에 소소하지만 손을 보탠다.
    
-(6) Authentication Methods
- - 리눅스 시스템에서 공식 문서를 볼 수 있는 중요한 기술이 있다.
-   1) Linux Manual Pages : 인터넷으로 정보를 교환하기 전에 이용하던 방법이다.
-   2) Microsoft Windows : 윈도우는 예전부터 기술 문서들을 온라인으로 제공한다.
-   3) Product Documentation : 잘 만들어진 상품들은 잘 만들어진 문서 또한 가지고 있다.
- - 이러한 기술 문서들은 중요한 업데이트 후에 한 번 읽을 필요가 있다. 
+(6) Group Policies
+ - 지금까지 사용자의 컴퓨터들은 여러가지 Ou로 나누었다. 그 주된 목적은 각각의 Ou에 개별적인 정책을 부여하는 데 있다. 이렇게 함으로써 우리는 사용자에게 각 부문에 맞는 인증과정과 보안 기준을 설정할 수 있다.
+ - 윈도우 운영체제는 그러한 정책들을 'Group Policy Objects(GPO)'를 통해 관리한다.
+ - GPO는 간단하게 말하면 각 Ou들의 세팅 정보들의 집합이다.
+ - GPO는 사용자들이 사용하는 각 기기들과 개체들의 보안 기준선과 정책들을 포함한다.
+ - GPO를 알아보기 위해 우리는 윈도우 시작 메뉴에 있는 'Group Policy Management'를 사용한다.
+ - GPO는 SYSVOL라 불리는 네트워크를 통해서 네트워크 전반에 분산되어 있다.
+ - 네트워크에 있는 GPO에 변경점이 있다면, 각 기기가 이것을 알아차리는 데는 최대 2시간이 소요된다.
+ - 만약, 즉각적으로 변경점을 업데이트하고 싶으면 다음과 같은 명령어를 터미널에 입력해야 한다. PS C:\> gpupdate /force 
  
-(7) Trees, Forests and Trusts
- - 현재 많은 플랫폼에서 다양한 소셜 네트워크 서비스를 운영하고 있다.
- - 그중 페이스북이나 x같이 유명한 것도 있지만 유명하지 않은 것도 존재한다.
- - 그런 사이트에 접속할 때는 보안적으로 임시 이메일을 생성하고 사용하는 것으로 인터넷 보안을 높여야 한다.
- - 정보 보안 분야에서 밥 먹고 살아가려면 우리는 항상 최신 트렌드를 알아야 하고 끊임 없이 배워야 한다.
- - 그리고 비밀번호를 알기 위해 설정한 질문들의 답이 자신만이 아는 것으로 바꿔야 한다. 
+(7) Authentication Methods
+ - 윈도우 도메인을 이용할 때, 모든 인증서들은 도메인 컨트롤러에 저장된다. 만약 사용자가 이러한 인증서를 사용하는 서비스에 접근할 때, 서비스는 도메인 컨트롤러에 사용자가 적절한 사용자인지 판별을 요청한다.
    
 (8) Conclusion
  - 정보 보안 전문가각 되기 위해서는 많은 것을 알아야 한다.
